<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="25dp"
    android:weightSum="100"
    tools:context=".loginuseractivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circular"
                android:backgroundTint="@color/grey"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="@string/_2"
                android:textSize="20sp"
                android:backgroundTint="@color/grey"
                android:background="@drawable/circular"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circular"
                android:backgroundTint="@color/my_primary"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="20"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_person_24"
            android:layout_marginTop="20dp"
            app:tint="@color/my_primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_username"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="text"
            android:padding="10dp"
            android:id="@+id/username_edt"
            android:layout_margin="10dp"
            android:background="@drawable/edit_rounder"
            android:elevation="5dp"
             />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center_vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NEXT"
            android:id="@+id/username_next_btn"
            android:background="@drawable/buttun_rounder"/>



    </LinearLayout>




</LinearLayout>